# quantFu

./: .auto-claude-status  .env  .env.example  .gitignore  .mcp.json  DEV_GUIDE.md  Makefile  PHASE2_GUIDE.md  PHASE3_LOCK.md  PHASE3_MULTI_STRATEGY.md  PHASE3_ROLLOVER.md  PHASE3_STRATEGY_PARAMS.md  PROJECT_SUMMARY.md  QUICKSTART.md  QUICK_START.md  README.md  SUPABASE_FIX_REPORT.md  SUPABASE_REALTIME_FIX_IN_PROGRESS.md  SUPABASE_SETUP_COMPLETE.md  check-env.sh  docker-compose.yml  test-frontend-connection.sh  test-studio-api.sh  watch-logs.sh
.claude/: AI-CHECKLIST.md  AUTO-REMINDER.md  AUTO_COMMIT_SUMMARY.md  CLAUDE.md  CONTRACTS_PAGE_FIX.md  DATABASE_MIGRATIONS_FIX.md  DB_CHECK_SUMMARY.md  KLINE_API_FIX.md  LESSONS_LEARNED.md  MAKEFILE_REFACTOR.md  MANDATORY.md  (+6 more)
backend/: .env  .env.example  Makefile  README.md  UV_GUIDE.md  config.py  main.py  pyproject.toml  requirements.txt  test_quick.py  test_tqsdk.py  test_tqsdk_auth.py  test_tqsdk_market.py
backend/.claude/: guide.md
backend/engines/: __init__.py  lock_engine.py  position_engine.py
backend/engines/.claude/: guide.md
backend/models/: __init__.py  schemas.py
backend/models/.claude/: guide.md
backend/services/: __init__.py  contract_service.py  kline_service.py  lock_trigger_service.py  multi_strategy_service.py  rollover_monitor.py  rollover_service.py  strategy_param_service.py  tqsdk_manager.py  tqsdk_service.py
backend/services/.claude/: guide.md
backend/tests/: test_api.py
backend/utils/: __init__.py  contract_mapper.py  db.py  logger.py  notification.py
backend/utils/.claude/: guide.md
(+155 files in other folders)
