[project]
name = "quantfu-backend"
version = "0.1.0"
description = "QuantFu 期货量化管理平台后端"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    # FastAPI核心
    "fastapi==0.109.0",
    "uvicorn[standard]==0.27.0",
    "python-multipart==0.0.6",

    # 数据库
    "supabase==2.13.0",
    "psycopg2-binary==2.9.9",
    "sqlalchemy==2.0.25",

    # 天勤TqSDK
    "tqsdk==3.8.8",

    # 数据模型
    "pydantic==2.5.3",
    "pydantic-settings==2.1.0",

    # HTTP客户端
    "httpx==0.26.0",
    "requests==2.31.0",

    # WebSocket
    "websockets==12.0",

    # 工具
    "python-dotenv==1.0.0",
    "python-dateutil==2.8.2",
    "psutil==5.9.8",

    # 测试
    "pytest==7.4.4",
    "pytest-asyncio==0.23.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[dependency-groups]
dev = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
addopts = "-v --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]
ignore = [
    "E501", # line too long (handled by formatter)
    "B008", # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["app"]
